feat: added masterlist and updated docs
