# docs/swagger.json
@@ -25,6 +25,7 @@
                     {
                         "type": "string",
                         "example": "filter",
+                        "description": "This is filter for all the field in the object GeographicArea",
                         "name": "filter",
                         "in": "query"
                     },
@@ -80,6 +81,63 @@
                     {
                         "type": "string",
                         "example": "filter",
+                        "description": "This is filter for all the field in the object GeographicArea",
+                        "name": "filter",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "example": 1,
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "example": 1000,
+                        "name": "perPage",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/PaginatedResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/masterlist": {
+            "get": {
+                "description": "get masterlist",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "masterlist"
+                ],
+                "summary": "Show list of masterlist",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "example": "filter",
+                        "description": "This is filter for all the field in the object GeographicArea",
                         "name": "filter",
                         "in": "query"
                     },
@@ -135,6 +193,7 @@
                     {
                         "type": "string",
                         "example": "filter",
+                        "description": "This is filter for all the field in the object GeographicArea",
                         "name": "filter",
                         "in": "query"
                     },
@@ -190,6 +249,7 @@
                     {
                         "type": "string",
                         "example": "filter",
+                        "description": "This is filter for all the field in the object GeographicArea",
                         "name": "filter",
                         "in": "query"
                     },
